--- a/src/main/resources/templates/memberHome.html
+++ b/src/main/resources/templates/memberHome.html
@@ -45,7 +45,12 @@
             <div class="second-container">
                 <div class="title">
                     <p class="selling-count-label" th:text="|판매 물품 (${countPost}) |"></p>
-                    <button class="home-btn" type="button" th:onclick="|location.href = '@{|/post/onSale/${member.memId}|}'|"> >&nbsp;이동</button> <br/>
+                    <button class="home-btn" type="button"
+                            th:if="${session.loginMember == null || session.loginMember.memId != member.memId}"
+                            th:onclick="|location.href = '@{|/post/onSale/${member.memId}|}'|"> >&nbsp;이동</button> <br/>
+                    <button class="home-btn" type="button"
+                            th:if="${session.loginMember != null && session.loginMember.memId == member.memId}"
+                            th:onclick="|location.href = '@{|/members/${member.memId}/trade/sellList|}'|"> >&nbsp;이동</button> <br/>
                 </div>
                 <div class="px-2 mt-3 content">
                     <div th:if="${postList.isEmpty()}">
