--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -89,8 +89,8 @@
                         <div class="d-flex bd-top-bottom py-sm-3">
                             <!--찜-->
                             <div class="me-3">
-                                <i id="emptyHeart" class="bi bi-heart" th:onclick="addWish([[${post.postId}]])" style="display:none; font-size: 2rem; margin-right: 5%" ></i>
-                                <i id="fillHeart" class="bi bi-heart-fill" th:onclick="rmvWish([[${post.postId}]])" style="display:none; font-size: 2rem; color: red; margin-right: 5%"></i>
+                                <i id="emptyHeart" class="bi bi-heart cursor" th:onclick="addWish([[${post.postId}]])" style="display:none; font-size: 2rem; margin-right: 5%" ></i>
+                                <i id="fillHeart" class="bi bi-heart-fill cursor" th:onclick="rmvWish([[${post.postId}]])" style="display:none; font-size: 2rem; color: red; margin-right: 5%"></i>
                             </div>
                             <div class="vr fs-1"></div>
 
