--- a/src/main/resources/static/css/member_info.css
+++ b/src/main/resources/static/css/member_info.css
@@ -1,7 +1,8 @@
-.form_container {
-    min-width: 560px;
-    padding-top: 30px;
+hr{
+    color:#ccc;
+    opacity: 1;
 }
+
 .field-error {
     border-color: #dc3545;
     color: #dc3545;
@@ -10,3 +11,140 @@
     border-color: #dc3545;
 }
 
+.info-container {
+    display: flex;
+    flex-wrap: wrap;
+
+    padding-top: 50px;
+}
+
+.info-container .info-nav {
+    flex-basis: 20%;
+    flex-grow: 0;
+
+    display: flex;
+    flex-direction: column;
+    height: 1000px;
+    margin: 50px auto;
+    padding: 10px;
+}
+.info-container .info-content {
+    flex-basis:80%;
+    flex-grow: 0;
+
+    padding: 25px 0 20px 30px;
+    border-left: 1px solid #ccc;
+    min-height: 800px;
+}
+
+.info-container .info-nav .nav-top {
+    flex:1;
+    flex-basis: 15%;
+    display: inline-block;
+    font-weight: 400;
+    padding-top: 20px;
+    padding-left: 5px;
+    height: auto;
+}
+.info-container .info-nav .nav-top .profile-top{
+    height: 60px;
+}
+.info-container .info-nav .nav-top > p {
+    vertical-align: middle;
+    margin : 20px 0 0 5px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Noto Sans KR', sans-serif;
+    color: #555;
+}
+
+.info-container .info-nav .info-nav-btns {
+    flex:1;
+    flex-basis:85%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.info-container .info-nav .info-nav-btns .info-nav-btn {
+    flex:1;
+    margin: 0;
+    height: 40px;
+    flex-grow: 0;
+}
+
+.info-container .info-nav .info-nav-btns .info-nav-btn a {
+    color: #999;
+    width: 100px;
+    text-decoration: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+.info-container .info-nav .info-nav-btns .info-nav-btn a:hover, a:active{
+    color: #333;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.info-container .info-nav .info-nav-btns .info-nav-btn p {
+    display: inline-block;
+    color: #ff9d0a;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+
+/*공통*/
+.profile-img{
+    width: 70px;
+    height: 70px;
+    overflow: hidden;
+    border-radius: 50%;
+    /*margin: 0 auto;*/
+    border: 1px solid #e9ecef;
+}
+.profile-img img{
+    width: 100%;
+    height: 100%;
+}
+
+/*내용*/
+.info-container .info-content .edit-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+}
+.info-container .info-content .edit-form .edit-title {
+    height: 50px;
+    color: #555;
+}
+.info-container .info-content .edit-form .pf-input {
+    margin: 10px;
+}
+.info-container .info-content .edit-form  .img-form {
+    position: relative;
+}
+.info-container .info-content .edit-form .img-form .profile-img {
+    display: inline-block;
+}
+
+.info-container .info-content .edit-form  .img-form .input-file-btn{
+    display: inline-block;
+    position: absolute;
+    top: 25px;
+    left: 80px;
+    color: #999;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 15px;
+}
+.info-container .info-content .edit-form  .img-form .input-file-btn:hover, .input-file-btn:active{
+    color: #333;
+}
+.info-container .info-content .edit-form .pf-input .form-control {
+    font-size: 15px;
+}
+.info-container .info-content .edit-form .edit-btn {
+    display: block;
+    margin: 25px auto;
+}
