--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -34,9 +34,28 @@
 <!--                </div>
             </section>-->
             <!-- Footer-->
-            <!--        <footer class="py-5 bg-dark">
-                    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
-                    </footer>-->
+            <footer>
+                <div class="container bd-top-grey py-sm-5 px-5">
+                    <section class="ft-section">
+                        <section>
+                            <div class="ft-text"><b>팀원 </b> 박재경 최혜은 남호용</div>
+                            <div class="ft-text"><b>주소 </b> 서울특별시 마포구 신촌로 176 중앙정보처리학원</div>
+                            <div class="ft-text"><b>전화 </b> 1544-1544</div>
+                            <div class="ft-text"><b>이메일 </b> abcd1234@mango.com</div><br/>
+                            <div class="ft-text"><a class="ft-a" href="#">제휴문의</a><a class="ft-a" href="#">광고문의</a><a class="ft-a" href="#">PR문의</a><a class="ft-a" href="#">IR문의 </a> </div>
+                            <div class="ft-text"><a class="ft-a" href="#">이용약관</a><a class="ft-a" href="#">개인정보처리방침</a><a class="ft-a" href="#">위치기반서비스 이용약관</a><a class="ft-a" href="#">이용자보호 비전과 계획</a> </div>
+                            <br/>
+                            <br/>
+                        </section>
+                        <section>
+                            <i class="bi bi-facebook ft-a fs-4"></i>
+                            <i class="bi bi-instagram ft-a fs-4"></i>
+                            <i class="bi bi-youtube ft-a fs-4"></i>
+                        </section>
+                    </section>
+                    <p class="mt-4 text-center text-dark">Copyright &copy; 망고마켓 2023</p>
+                </div>
+            </footer>
 <!--        </div>-->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
