--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,29 +6,40 @@
     <title>망고마켓</title>
     <style>
         .main-text{
-            width: 550px;
+            width: 500px;
             object-fit: contain;
         }
         .main-img{
-            width: 550px;
+            width: 500px;
             object-fit: contain;
         }
         .main-container{
             margin: 0 auto;
             display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .sec-height{
+            height: 620px;
+        }
+        .sec-bg {
+            background-color: #E6F3E6;
         }
     </style>
 </head>
 
 <div layout:fragment="content">
-    <section class="py-5">
-        <div class="container px-4 bg-light-orange">
-            <div class="main-container py-5 px-5">
+    <section class="py-5 bg-light-orange">
+            <div class="main-container sec-height py-5 px-5">
                 <img class="main-text" src="/css/images/main_home_text.png">
                 <img class="main-img" src="/css/images/main_home_img.png">
 
             </div>
+    </section>
+    <section class="py-5 sec-bg">
+        <div class="main-container sec-height py-5 px-5">
         </div>
+
     </section>
 </div>
 
