--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -5,79 +5,50 @@
 
 <head layout:fragment="head">
   <meta charset="utf-8">
-  <style>
-    .custom-container {
-      background-color: #fff0e0;
-    }
-    .form-container {
-      max-width: 560px;
-      margin: 20px;
-    }
-    .loginForm-border {
-      height: 500px;
-      width: 400px;
-      border: 1px solid #f1f3f5;
-      border-radius: 20px;
-      box-shadow: 0px 5px 10px 0px #f1f3f5;
-      padding: 0px 20px 50px 20px;
-    }
-    .field-error {
-      border-color: #dc3545;
-      color: #dc3545;
-    }
-    #kakao img{
-      width: 300px;
-      cursor: pointer;
-    }
-  </style>
+  <link href="/css/login.css" rel="stylesheet">
 </head>
 
 <div layout:fragment="content">
-  <section class="px-md-5 mt-5 d-flex justify-content-center custom-container">
-    <div class="form-container py-5">
-      <div class="loginForm-border">
+  <section class="px-md-5 mt-5 d-flex justify-content-center">
+    <div class="login-container">
+      <div class="login-border">
         <div class="py-4 text-center">
           <h2>로그인</h2>
         </div>
         <form action="" th:action th:object="${loginForm}" method="post">
-          <div th:if="${#fields.hasGlobalErrors()}">
+          <!--<div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}"
                th:text="${err}">전체 오류 메시지</p>
-          </div>
-
-          <div>
+          </div>-->
+          <div class="input">
             <label for="loginId">로그인 ID</label>
-            <input type="text" id="loginId" th:field="*{loginId}" class="form-control"
+            <input type="text" id="loginId" th:field="*{loginId}"
+                   class="form-control"
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{loginId}" />
           </div>
-
-          <div>
+          <div class="input">
             <label for="pwd">비밀번호</label>
             <input type="password" id="pwd" th:field="*{pwd}"
                    class="form-control"
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{pwd}" />
           </div>
-          <hr class="my-4">
-          <div class="col">
-            <div class="row">
-              <button class="w-100 btn btn-secondary btn-lg"
-                      onclick="location.href='/member/signupForm'"
-                      th:onclick="|location.href='@{/members/signup}'|"
-                      type="button">회원가입</button>
+          <hr class="separator">
+          <div class="bottom-sec">
+            <div class="bottom-links">
+              <a class="bottom-link">아이디 찾기</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+              <a class="bottom-link">비밀번호 찾기</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+              <a class="bottom-link" th:href="@{/members/signup}" >회원가입</a>
             </div>
-        <!--    <div class="row">
-              <button class="w-100 btn btn-secondary btn-lg"
-                      onclick="location.href='/'"
-                      th:onclick="|location.href='@{/}'|"
-                      type="button">취소</button>
-            </div>-->
-            <div class="row">
-              <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
+            <div class="bottom-login">
+              <button class="btn-orange" type="submit">로그인</button>
             </div>
-            <div class="row" id="kakao" th:onclick="loginWithKakao()">
-              <img src="/css/images/login/kakao_login.png">
+            <div class="bottom-social" id="kakao" th:onclick="|location.href='@{/login/getKakaoLoginURL}'|">
+              <button class="btn-kakao" type="button">
+                <img class="kakao-img" src="/css/images/login/kakao_login_mini.png">
+                <p class="kakao-text">카카오톡으로 로그인하기</p>
+              </button>
             </div>
           </div>
         </form>
@@ -88,14 +59,6 @@
 
 <div layout:fragment="script" >
   <script th:inline="javascript">
-    function loginWithKakao() {
-      $.ajax({
-        url: '/login/getKakaoLoginURL',
-        type: 'get',
-      }).done(function (res) {
-        location.href = res;
-      });
-    }
   </script>
 </div>
 </html>
