--- a/src/main/resources/templates/member/signupForm.html
+++ b/src/main/resources/templates/member/signupForm.html
@@ -1,145 +1,114 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="http://www.w3.org/1999/html"
       layout:decorate="~{layout/basic.html}">
 
 <head layout:fragment="head">
     <title>회원가입 폼</title>
-    <style>
-        .form-container {
-            max-width: 560px;
-            padding-left: 100px;
-        }
-        .field-error {
-            border-color: #dc3545;
-            color: #dc3545;
-        }
-        .field-error-border {
-            border-color: #dc3545;
-        }
-    </style>
+    <link href="/css/signup.css" rel="stylesheet">
+    <link href="/css/login.css" rel="stylesheet">
 </head>
 
 <div layout:fragment="content">
-<div class="form-container">
-    <div class="py-5 text-center">
-        <h2>회원 가입</h2>
-    </div>
+<section class="px-md-5 mt-5 d-flex justify-content-center">
+    <div class="signup-container">
+        <div class="signup-border">
+            <div class="py-4 text-center">
+                <h2 class="mb-0">회원 가입 폼</h2>
+            </div>
+            <div th:if="${isSocial}">
+                <h6 class="text-center">[[${platform}]]로 로그인되었습니다. </h6>
+                <h6 class="mt-3 mb-4 text-center">[[${platform}]]계정으로 망고마켓 가입이 필요합니다.</h6>
+                <form id="socialForm">
+                    <input type="hidden" id="email" th:value="${userInfo.get('email')}">
+                    <input type="hidden" id="profPath" th:value="${userInfo.get('profPath')}">
+                    <div class="input">
+                        <label for="locSocial">내 동네</label>
+                        <select id="locSocial"  th:onchange="locTest()" name="locSocial" class="form-select">
+                            <option th:each="locValue:${T(com.exercise.carrotproject.domain.enumList.Loc).values()}"
+                                    th:value="${locValue}"
+                                    th:text="${locValue.locName}"></option>
+                        </select>
+                    </div>
+                    <div class="input">
+                        <label for="nicknameSocial">닉네임</label>
+                        <input type="text" id="nicknameSocial"
+                               class="form-control"
+                               th:value="${userInfo.get('nickname')}">
+                        <div id="nick-error"/>
+                    </div>
+                    <div class="bottom-sec">
+                        <div class="bottom-btn">
+                            <button class="w-100 btn-orange btn-lg"
+                                    th:onclick="signupSocialMember([[${platform}]])"
+                                    type="button"> 회원 가입 </button>
+                        </div>
+                    </div>
+                </form>
+            </div><!--role:social form-->
 
-    <div th:if="${isSocial}">
-        <h6>
-            [[${platform}]]로 로그인되었습니다. [[${platform}]]계정으로 망고마켓 가입이 필요합니다.
-        </h6>
-        </hr>
-        <form id="socialForm">
-            <h4 class="mb-3">프로필 입력</h4>
-            <input type="hidden" id="email" th:value="${userInfo.get('email')}">
-            <input type="hidden" id="profPath" th:value="${userInfo.get('profPath')}">
-            <div>
-                <label for="locSocial">내 동네</label>
-                <select id="locSocial"  th:onchange="locTest()" name="locSocial">
-                    <option th:each="locValue:${T(com.exercise.carrotproject.domain.enumList.Loc).values()}"
-                            th:value="${locValue}"
-                            th:text="${locValue.locName}"></option>
-                </select>
-            </div>
-            <div>
-                <label for="nicknameSocial">닉네임</label>
-                <input type="text" id="nicknameSocial"
-                       class="formcontrol"
-                       th:value="${userInfo.get('nickname')}">
-                <div id="nick-error"/>
-            </div>
-            <hr class="my-4">
-            <div class="row">
-                <div class="col">
-                    <button class="w-100 btn btn-secondary btn-lg"
-                            onclick="location.href='/'"
-                            id="socialCancelBtn"
-                            type="button">취소</button>
-                </div>
-                <div class="col">
-                    <button class="w-100 btn btn-secondary btn-lg"
-                            onclick="location.href='/member/loginForm'"
-                            id="socialCancelBtn2"
-                            th:onclick="|location.href='@{/login}'|"
-                            type="button">로그인 폼으로</button>
-                </div>
-                <div class="col">
-                    <button class="w-100 btn btn-primary btn-lg"
-                            th:onclick="signupSocialMember([[${platform}]])"
-                            type="button"> 회원 가입 </button>
-                </div>
-            </div>
-        </form>
-    </div><!--role:social form-->
+            <div th:unless="${isSocial}">
+                <form action="" th:action th:object="${signupForm}" method="post">
+                    <h4 class="mb-3 text-center">회원 정보 입력</h4>
+                    <div class="input">
+                        <label for="memId">아이디</label>
+                        <input type="text" id="memId" th:field="*{memId}"
+                               class="form-control"
+                               th:errorclass="field-error">
+                        <div class="field-error" th:errors="*{memId}" />
+                    </div>
+                    <div class="input">
+                        <label for="memPwd">비밀번호</label>
+                        <input type="password" id="memPwd" th:field="*{pwd}"
+                               class="form-control"
+                               th:errorclass="field-error">
+                        <div class="field-error" th:errors="*{pwd}" />
+                    </div>
+                    <div class="input">
+                        <label for="pwdConfirm">비밀번호 재확인</label>
+                        <input type="password" id="pwdConfirm" th:field="*{pwdConfirm}"
+                               class="form-control"
+                               th:errorclass="field-error">
+                        <div class="field-error" th:errors="*{pwdConfirm}" />
+                    </div>
+                    <div class="input">
+                        <label for="nickname">닉네임</label>
+                        <input type="text" id="nickname" th:field="*{nickname}"
+                               class="form-control"
+                               th:errorclass="field-error">
+                        <div class="field-error" th:errors="*{nickname}" />
+                    </div>
+                    <div class="input">
+                        <label for="loc">내 동네</label>
+                        <select id="loc" th:field="*{loc}" th:onchange="locTest()" class="form-select">
+                            <option th:each="locValue:${T(com.exercise.carrotproject.domain.enumList.Loc).values()}"
+                                    th:value="${locValue}"
+                                    th:text="${locValue.locName}"></option>
+                        </select>
+                        <div class="field-error" th:errors="*{loc}"> </div>
+                    </div>
 
-    <div th:unless="${isSocial}">
-    <form action="" th:action th:object="${signupForm}" method="post">
-        <h4 class="mb-3">회원 정보 입력</h4>
-        <div>
-            <label for="memId">아이디</label>
-            <input type="text" id="memId" th:field="*{memId}"
-                   class="formcontrol"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{memId}" />
-        </div>
-        <div>
-            <label for="memPwd">비밀번호</label>
-            <input type="password" id="memPwd" th:field="*{pwd}"
-                   class="formcontrol"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{pwd}" />
-        </div>
-        <div>
-            <label for="pwdConfirm">비밀번호 재확인</label>
-            <input type="password" id="pwdConfirm" th:field="*{pwdConfirm}"
-                   class="formcontrol"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{pwdConfirm}" />
-        </div>
-        <div>
-            <label for="nickname">닉네임</label>
-            <input type="text" id="nickname" th:field="*{nickname}"
-                   class="formcontrol"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{nickname}" />
-        </div>
-        <div>
-            <label for="loc">내 동네</label>
-            <select id="loc" th:field="*{loc}" th:onchange="locTest()">
-                <option th:each="locValue:${T(com.exercise.carrotproject.domain.enumList.Loc).values()}"
-                        th:value="${locValue}"
-                        th:text="${locValue.locName}"></option>
-            </select>
-            <div class="field-error" th:errors="*{loc}"> </div>
-        </div>
-        <hr class="my-4">
-        <div class="row">
-            <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='/'"
-                        th:onclick="|location.href='@{/}'|"
-                        type="button">취소</button>
-            </div>
-            <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='/member/loginForm'"
-                        th:onclick="|location.href='@{/login}'|"
-                        type="button">로그인 폼으로</button>
-            </div>
-            <div class="col" th:unless="${isSocial}">
-                <button class="w-100 btn btn-primary btn-lg"
-                        type="submit"> 회원 가입 </button>
-            </div>
-        </div>
-        </form>
-    </div> <!--role:user form-->
-</div> <!-- /form-container -->
+                    <div class="bottom-sec">
+                        <div class="bottom-btn">
+                            <button class="w-100 btn btn-orange btn-lg"
+                                    type="submit"> 회원 가입 </button>
+                        </div>
+                        <div class="bottom-social" id="kakao" th:onclick="|location.href='@{/login/getKakaoLoginURL}'|">
+                            <button class="btn-kakao" type="button">
+                                <img class="kakao-img" src="/css/images/login/kakao_login_mini.png">
+                                <p class="kakao-text">카카오톡으로 가입하기</p>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div> <!--role:user form-->
+
+        </div> <!--signup-border-->
+    </div> <!--signup-container-->
+</section>
 </div>
 
 <div layout:fragment="script" th:inline="javascript">
-<!--  <script type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?version=2.0&apiKey=[593AE8E8-EC6D-350F-8E69-BC6C4E15A535]"></script>-->
 <script th:inline="javascript">
     function signupSocialMember(platform) {
         console.log($('#profPath').val())
@@ -166,7 +135,7 @@
             }
         })
     }
-    $('#socialCancelBtn').on("click", function(){
+/*    $('#socialCancelBtn').on("click", function(){
         $.ajax({
             type: 'get',
             url: '/unlink/kakao',
@@ -189,6 +158,7 @@
                 console.log(err);
             }
         })
-    });
+    });*/
+
 </script>
 </div>
