publicReview, mannerDetail 페이지

--- a/src/main/resources/templates/member/signupForm.html
+++ b/src/main/resources/templates/member/signupForm.html
@@ -14,7 +14,7 @@
     <div class="signup-container">
         <div class="signup-border">
             <div class="py-4 text-center">
-                <h2 class="mb-0">회원 가입 폼</h2>
+                <h2 class="mb-0">회원가입</h2>
             </div>
             <div th:if="${isSocial}">
                 <h6 class="text-center">[[${platform}]]로 로그인되었습니다. </h6>
