--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -5,7 +5,7 @@
 
 <head layout:fragment="head">
     <title>리뷰 보기</title>
-    <link href="/css/reviewDetail.css" rel="stylesheet" />
+    <link href="/css/review_detail.css" rel="stylesheet" />
 </head>
 
 <div layout:fragment="content">
